--- a/dev/html-dev/index-dev.html
+++ b/dev/html-dev/index-dev.html
@@ -10,7 +10,7 @@
 <body>
   <div class="wrap-component">
     <div class="wrap-title">
-      <!-- <h1>Aguililla: galería del terror</h1> -->
+      <h1>La memoria viaja en Metro</h1>
     </div>
     <div class="wrap-slider">
       <div id="slide-maps" class="owl-carousel slider">
